Fixes to UI Added support for representation types commons-ip updated to last version

--- a/src/main/resources/properties/help_pt.properties
+++ b/src/main/resources/properties/help_pt.properties
@@ -7,7 +7,7 @@ export=<p>O último passo no processo de criação de SIP é exportar os SIPs ma
 <p>Pode adaptar o processo de exportação às suas necessidades.</p>\
 <p>A primeira decisão é se pretende exportar todos os SIPs presentes no plano de classificação ou apenas os selecionados. Por omissão, os SIPs exportados são os <strong>selecionados</strong> quando o utilizador clicar no botão "Exportar", mas este comportamento pode ser alterado através do botão "Exportar todos".</p>\
 <p>Outro campo obrigatório é o destino dos SIPs depois de exportados.</p>\
-<p>É também nessa altura que o formato de exportação deve ser escolhido. De momento, o RODA-in suporta 2: SIP do projeto E-ARK e BagIt.</p>
+<p>É também nessa altura que o formato de exportação deve ser escolhido. De momento, o RODA-in suporta 2. SIP do projeto E-ARK e BagIt.</p>
 fileExplorer=<p>Um objeto pode ter 3 estados: normal, ignorado ou mapeado.</p>\
 <p><strong>Normal</strong> é o estado normal dos objetos e o único estado a partir do qual SIPs podem ser criados.</p>\
 <p>Objetos no estado <strong>ignorado</strong> não serão utilizados na criação de pacotes. Podem ser ignorados tendo por base regras definidas na configuração da aplicação ou manualmente através do botão "Ignorar". Este objetos são escondidos por omissão, mas podem ser apresentados ativando uma opção do menu.</p>\
