--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -39,10 +39,10 @@ CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 
 FileExplorerPane.chooseDir=Choose folder
 FileExplorerPane.help.title=Choose the folders\nthat contain your files
-FileExplorerPane.title=1: File Explorer
+FileExplorerPane.title=1. File Explorer
 
-InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a new association
-InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
+InspectionPane.help.ruleList=Associate files/directories \nto an information package \nto create a new association
+InspectionPane.help.title=Select an item from \nthe information packages\nto inspect it
 InspectionPane.metadata=Metadata
 InspectionPane.metadata.placeholder=Write the description node's metadata here
 InspectionPane.onDrop=Create association
@@ -86,7 +86,7 @@ SchemaPane.add=Add
 SchemaPane.help.title=Load your\nclassification scheme
 SchemaPane.newNode=New node
 SchemaPane.remove=Remove
-SchemaPane.title=2: Information Packages
+SchemaPane.title=2. Information Packages
 SchemaPane.create=new classification scheme
 SchemaPane.load=Load a classification scheme
 SchemaPane.or=or create a
@@ -100,17 +100,17 @@ SourceTreeCell.remove=Remove Ignore
 SourceTreeLoading.title=Loading...
 SourceTreeLoadMore.title=Load More...
 
-association.singleSip.title = One description item with all selected files and/or folders
+association.singleSip.title = One information package with all selected files and/or folders
 association.singleSip.description = Use this option to create one and only one SIP containing all selected files and folders. If you selected five folders and/or files the association will result in one SIP corresponding to one item with a set description level.
 
-association.sipSelection.title = One description item for each selected files or folders
+association.sipSelection.title = One information package for each selected files or folders
 association.sipSelection.description = Use this option to create a SIP for each of the selected files or folders. If you selected five files and/or folders, the association will create five SIPs, i.e. five descriptive items. Each one of these items can correspond to a distinct description level.
 
-association.sipPerFile.title = One description item for each file under the selected folder(s)
+association.sipPerFile.title = One information package for each file under the selected folder(s)
 association.sipPerFile.description = Use this option to create one SIP for each file under the selected folder(s). This operation will create a set of SIPs equal to the number of files under the selected folder(s).
 
 association.sipWithStructure.title = One classification scheme from folder structure
-association.sipWithStructure.description = This option creates description objects in addition to submission packages. It should be used when the folder structure is well organized and resembles the desired output plan. If a folder only has sub-folders, it creates a Series. When a folder's children are just files, the whole folder will be used to create one submission package. In a situation where a folder has a mixed contet, files and sub-folders, each file will be a submission package and each sub-folder will be a Series.
+association.sipWithStructure.description = This option creates information packages in addition to submission packages. It should be used when the folder structure is well organized and resembles the desired output plan. If a folder only has sub-folders, it creates a Series. When a folder's children are just files, the whole folder will be used to create one submission package. In a situation where a folder has a mixed contet, files and sub-folders, each file will be a submission package and each sub-folder will be a Series.
 
 metadata.singleFile.title = Load from a single file
 metadata.singleFile.description = Use this option to add to each SIP one metadata file of your choice. The selected file will be added to each of the created SIPs.
@@ -180,7 +180,7 @@ metadata.emptyFile.description=Use this option if you wish to create a new file 
 name=Name
 InspectionPane.addMetadataError.title=Add metadata file
 InspectionPane.addMetadataError.header=Error adding metadata file
-InspectionPane.addMetadataError.content=There's already a file name "%s" in the description object's metadata list.
+InspectionPane.addMetadataError.content=There's already a file name "%s" in the information package's metadata list.
 CreationModalProcessing.elapsed=Elapsed
 add=Add
 metadata.id=ID
@@ -194,7 +194,7 @@ metadata.language=Language
 metadata.description=Description
 metadata.rights=Rights
 metadata.level=Description level
-InspectionPane.title=3: Inspector
+InspectionPane.title=3. Inspector
 InspectionPane.changeTemplate.title=Override template
 InspectionPane.changeTemplate.header=Do you want to override the template?
 InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
@@ -209,14 +209,22 @@ metadata.embargoTime=Embargo Time
 IPContentType.ERMS=Electronic Resource Management System
 IPContentType.RDB=Relational Database Management System
 IPContentType.GEODATA=Geographical Data
-IPContentType.SFSB=SFSB
+IPContentType.SFSB=Simple File System Based
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
+
+RepresentationType.MOREQ=MOREQ
+RepresentationType.SIARD=SIARD
+RepresentationType.SIARD2=SIARD2
+RepresentationType.SMURF=SMURF
+RepresentationType.OTHER=OTHER
+RepresentationType.MIXED=MIXED
 
 InspectionPane.IPType=Package type
 
 metadata.descDate=Description creation date
 InspectionPane.sipTypeTooltip=IP type
+InspectionPane.representationTypeTooltip=Representation type
 genericError.title=Oops! An error has occurred.
 genericError.content=An unexpected error has occurred.\nThe application may be unstable from now on and have strange behaviours. \nPlease contact the developers about this problem.
 CreationModalProcessing.openfolder=Open folder
@@ -259,4 +267,5 @@ Main.helpPage=Help page
 errorValidatingMetadata = The file is not valid according to the schema.
 
 
+ExportBox.title=4. Final Step
 
