--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -37,9 +37,9 @@ CreationModalProcessing.remaining=Tiempo restante
 CreationModalProcessing.subtitle=Creado %d of %d (%d%%)
 FileExplorerPane.chooseDir=Seleccionar carpeta
 FileExplorerPane.help.title=Seleccionar carpeta que contiene sus archivos
-FileExplorerPane.title=1: Explorador de Archivos
+FileExplorerPane.title=1. Explorador de Archivos
 InspectionPane.help.ruleList=Asociar archivos / directorios\na un objeto Descripción\npara crear una nueva asociación
-InspectionPane.help.title=Seleccione un elemento del\nesquema\nla clasificación para inspeccionarlo
+InspectionPane.help.title=Seleccione un elemento del\n paquetes de informacíon para inspeccionarlo
 InspectionPane.metadata=Metadata
 InspectionPane.metadata.placeholder=Escribe los metadatos para la descripción del nodo aquí
 InspectionPane.onDrop=Crear asociación
@@ -78,7 +78,7 @@ SchemaPane.add=Agregar
 SchemaPane.help.title=Carga tu\nesquema de clasificación
 SchemaPane.newNode=Nuevo nodo
 SchemaPane.remove=Quitar
-SchemaPane.title=2: Paquetes de Información
+SchemaPane.title=2. Paquetes de Información
 SchemaPane.create=Nuevo Esquema de Clasificación
 SchemaPane.load=Cargar Esquema de Clasificación
 SchemaPane.or=o crear uno
@@ -89,9 +89,9 @@ SimpleSipCreator.finalizingSip=Finalizando SIP
 SourceTreeCell.remove=Quitar ignorar
 SourceTreeLoading.title=Cargando...
 SourceTreeLoadMore.title=Cargar más...
-association.singleSip.title=Una descripción del artículo con todos los archivos y / o carpetas seleccionados
+association.singleSip.title=Un paquete de información con todos los archivos y / o carpetas seleccionados
 association.singleSip.description=Utilice esta opción para crear un sólo SIP que contenga todos los archivos y carpetas seleccionados. Si ha seleccionado cinco carpetas y / o archivos de la asociación resultará solamente en un SIP correspondiente a un elemento con un nivel de descripción del conjunto.
-association.sipSelection.title=Una descripción del artículo para cada uno de los archivos o carpetas seleccionados
+association.sipSelection.title=Un paquete de información para cada uno de los archivos o carpetas seleccionados
 association.sipSelection.description=Utilice esta opción para crear un SIP para cada uno de los archivos o carpetas seleccionados. Si ha seleccionado cinco archivos y / o carpetas, la asociación creará cinco SIP, es decir, cinco elementos descriptivos. Cada uno de estos elementos puede corresponder a un nivel de descripción distinta.
 association.sipPerFile.title=Un elemento de descripción para cada archivo en la carpeta seleccionada (s)
 association.sipPerFile.description=Utilice esta opción para crear un SIP para cada archivo en la carpeta (s) seleccionada. Esta operación creará un conjunto de SIP igual al número de archivos en la carpeta (s) seleccionada.
@@ -175,7 +175,7 @@ metadata.language=Lenguaje
 metadata.description=Descripción
 metadata.rights=Derechos
 metadata.level=Nivel de Descripción
-InspectionPane.title=3: Inspector
+InspectionPane.title=3. Inspector
 InspectionPane.changeTemplate.title=Plantilla de anulación
 InspectionPane.changeTemplate.header=Usted quiere anular la plantilla?
 InspectionPane.changeTemplate.content=Ya no podrá utilizar el formulario para editar este archivo de metadatos.
@@ -190,13 +190,21 @@ metadata.embargoTime=Tiempo de embargo
 IPContentType.ERMS=Sistema de Gestión de Recursos Electrónicos
 IPContentType.RDB=Sistema de gestión de bases de datos relacionales
 IPContentType.GEODATA=Dato geográficos
-IPContentType.SFSB=SFSB
+IPContentType.SFSB=Sistema de archivos
 IPContentType.MIXED=Mezclado
 IPContentType.OTHER=Otro
+
+RepresentationType.MOREQ=MOREQ
+RepresentationType.SIARD=SIARD
+RepresentationType.SIARD2=SIARD2
+RepresentationType.SMURF=SMURF
+RepresentationType.OTHER=OTHER
+RepresentationType.MIXED=MIXED
 
 InspectionPane.IPType=Tipo IP
 metadata.descDate=Descripción fecha de creación
 InspectionPane.sipTypeTooltip=Tipo IP
+InspectionPane.representationTypeTooltip=Tipo de represención
 genericError.title=Oops\! Ha ocurrido un error...
 genericError.content=Ha ocurrido un error inesperado.\nLa aplicación puede ser inestable a partir de ahora y podría tener comportamientos extraños.\nPor favor, póngase en contacto con los desarrolladores acerca de este problema.
 CreationModalProcessing.openfolder=Abrir carpeta
@@ -213,3 +221,5 @@ restart=Restaurar
 
 errorValidatingMetadata = El archivo no es válido según el esquema.
 
+
+ExportBox.title=4. Passo Final
