--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.remaining=Hátralévő idő
 CreationModalProcessing.subtitle=%d elkészült %d (%d%%)-ből
 FileExplorerPane.chooseDir=Mappaválasztás
 FileExplorerPane.help.title=Válaszd ki a fájlokat\ntartalmazó mappát
-FileExplorerPane.title=1: Forrásfájlkereső
+FileExplorerPane.title=1. Forrásfájlkereső
 InspectionPane.help.ruleList=Párosítsd a fájlokat/mappákat a leírási elemekkel új összerendeléshez.
 InspectionPane.help.title=Besorolási séma \nelemeinek kiválasztása\nés megtekintése
 InspectionPane.metadata=Metaadatok
@@ -78,7 +78,7 @@ SchemaPane.add=Hozzáadás
 SchemaPane.help.title=Saját besorolási séma\nbetöltése
 SchemaPane.newNode=Új elágazás
 SchemaPane.remove=Eltávolít
-SchemaPane.title=2: Besorolási séma
+SchemaPane.title=2. Besorolási séma
 SchemaPane.create=Új besorolási séma
 SchemaPane.load=Besorolási séma betöltése
 SchemaPane.or=vagy
@@ -175,7 +175,7 @@ metadata.language=Nyelv
 metadata.description=Leírás
 metadata.rights=Felhasználási korlátozások
 metadata.level=Leírási szint
-InspectionPane.title=3: Ellenőrzés
+InspectionPane.title=3. Ellenőrzés
 InspectionPane.changeTemplate.title=Sablon felülírása
 InspectionPane.changeTemplate.header=Felülírod a sablont?
 InspectionPane.changeTemplate.content=A későbbiekben nem tudod majd az űrlapot használni a metaadatfájl szerkesztésére.
@@ -192,8 +192,17 @@ IPContentType.SMURF=Szemantikusan jelölt formátum
 InspectionPane.IPType=Infomrációs csomag típus
 IPContentType.MIXED=Vegyes
 IPContentType.OTHER=Egyéb
+
+RepresentationType.MOREQ=MOREQ
+RepresentationType.SIARD=SIARD
+RepresentationType.SIARD2=SIARD2
+RepresentationType.SMURF=SMURF
+RepresentationType.OTHER=OTHER
+RepresentationType.MIXED=MIXED
+
 metadata.descDate=A leírás készítési dátuma
 InspectionPane.sipTypeTooltip=Infomrációs csomag típus
+InspectionPane.representationTypeTooltip=Representation type
 genericError.title=Hoppá\! Hiba történt.
 genericError.content=Váratlan hiba történt. Az alkalmazás nem stabil és furcsaságokat produkálhat. Vegye fel a kapcsolatot a fejlesztőkkel.
 CreationModalProcessing.openfolder=Mappa megnyitása
@@ -209,4 +218,5 @@ restart=Újraindítás
 
 errorValidatingMetadata = The file is not valid according to the schema.
 
+ExportBox.title=4. Final Step
 
