--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -39,10 +39,10 @@ CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
 
 FileExplorerPane.chooseDir=Escolher pasta
 FileExplorerPane.help.title=Selecione as pastas\nque contêm os seus ficheiros
-FileExplorerPane.title=1: Explorador de ficheiros
+FileExplorerPane.title=1. Explorador de ficheiros
 
 InspectionPane.help.ruleList=Associe ficheiros/pastas \na um nível de descrição \npara criar uma nova associação
-InspectionPane.help.title=Escolha um item \ndo plano de classificação\npara o inspecionar
+InspectionPane.help.title=Escolha um item \ndos pacotes de informação\npara o inspecionar
 InspectionPane.metadata=Metadados
 InspectionPane.metadata.placeholder=Introduza os metadados do nível descritivo aqui
 InspectionPane.onDrop=Criar associação
@@ -86,7 +86,7 @@ SchemaPane.add=Adicionar
 SchemaPane.help.title=Carregue o\nplano de classificaçao
 SchemaPane.newNode=Novo nível descritivo
 SchemaPane.remove=Remover
-SchemaPane.title=2: Pacotes de Informação
+SchemaPane.title=2. Pacotes de Informação
 SchemaPane.create=novo plano de classificação
 SchemaPane.load=Carregar plano\nde classificação
 SchemaPane.or=ou crie um
@@ -100,13 +100,13 @@ SourceTreeCell.remove=Remover ignorado
 SourceTreeLoading.title=A carregar...
 SourceTreeLoadMore.title=Carregar mais...
 
-association.singleSip.title = Um item de descrição com todas as pastas e/ou ficheiros selecionados
+association.singleSip.title = Um pacote de informação com todas as pastas e/ou ficheiros selecionados
 association.singleSip.description = Use esta opção para criar um e apenas um pacote de submissão contendo no seu interior todas as pastas e ficheiros selecionados. Se selecionou cinco pastas e/ou ficheiros será criado apenas um pacote de submissão correspondendo apenas a um item com um determinado nível de descrição.
 
-association.sipSelection.title = Um item de descrição para cada uma das pastas e/ou ficheiros selecionados
+association.sipSelection.title = Um pacote de informação para cada uma das pastas e/ou ficheiros selecionados
 association.sipSelection.description = Use esta opção para criar um pacote de submissão para cada uma das pastas e/ou ficheiros selecionados. Se selecionou cinco pastas e/ou ficheiros, serão criados exatamente cinco pacotes de submissão, i.e. cinco itens descritivos. Cada um destes itens pode corresponder a um nível de descrição distinto.
 
-association.sipPerFile.title = Um item de descrição por cada ficheiro existente sob a(s) pasta(s) selecionada(s)
+association.sipPerFile.title = Um pacote de informação por cada ficheiro existente sob a(s) pasta(s) selecionada(s)
 association.sipPerFile.description = Use esta opção para criar um pacote de submissão por cada ficheiro que se encontre sob as pastas selecionadas. Esta operação irá criar um conjunto de pacotes de submissão igual ao número de ficheiros que se encontram sob as pastas selecionadas.
 
 association.sipWithStructure.title =  Um plano de classificação a partir da estrutura de pastas
@@ -194,7 +194,7 @@ metadata.language=Idioma
 metadata.description=Descrição
 metadata.rights=Direitos
 metadata.level=Nível descritivo
-InspectionPane.title=3: Inspecionar
+InspectionPane.title=3. Inspecionar
 InspectionPane.changeTemplate.title=Sobrepôr modelo
 InspectionPane.changeTemplate.header=Pretende sobrepor o modelo atual?
 InspectionPane.changeTemplate.content=Deixará de conseguir usar o formulário para editar este ficheiro de metadados.
@@ -209,13 +209,21 @@ metadata.embargoTime=Tempo de embargo
 IPContentType.ERMS=Sistema de Gestão de Recursos Eletrónicos
 IPContentType.RDB=Sistema de gestão de bases de dados relacionais
 IPContentType.GEODATA=Dados geográficos
-IPContentType.SFSB=SFSB
+IPContentType.SFSB=Sistema de ficheiros
 IPContentType.MIXED=Misto
 IPContentType.OTHER=Outro
+
+RepresentationType.MOREQ=MOREQ
+RepresentationType.SIARD=SIARD
+RepresentationType.SIARD2=SIARD2
+RepresentationType.SMURF=SMURF
+RepresentationType.OTHER=OTHER
+RepresentationType.MIXED=MIXED
 
 InspectionPane.IPType=Tipo de pacote
 metadata.descDate=Data da descrição
 InspectionPane.sipTypeTooltip=Tipo do pacote
+InspectionPane.representationTypeTooltip=Tipo de representação
 genericError.title=Oops! Ocorreu um erro.
 genericError.content=Aconteceu um erro inesperado.\nA aplicação pode ficar instável a partir de agora e ter comportamentos estranhos. \nPor favor contacte com a equipa de desenvolvimento sobre este problema.
 CreationModalProcessing.openfolder=Abrir pasta
@@ -258,3 +266,4 @@ Main.helpPage=Página de ajuda
 
 errorValidatingMetadata = O ficheiro não é valido de acordo com o schema.
 
+ExportBox.title=4. Pacotes de Submissão
