--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -1,3 +1,7 @@
+help=AJUDA
+helpText=sAOAdf fssdf sdf sdf sdf fs fsf sdfdsfsdfvsvfsfsvfsvfsdfvdfvfvf
+
+
 associate=To create SIPs, the user has to choose an aggregation rule. Start by selecting the files and folders that hold the content to be included in the SIPs and drag n’ drop them on a node of the classification hierarchy. This node can either be a classification scheme node, a SIP or the root level (i.e. no specific node). Alternatively, you may also click the "Associate" button to start the process. After this operation, you'll be presented with a set of options that will shape the way the SIPs are created.
 associationMethod=The data assocation method defines the rules that are used to transform the input files and folders in SIPs. There are currently four methods available.
 export=<p>The last step in the SIP creation process is to export the mapped SIPs to an output format to be submitted to the repository for ingest. It’s important to note that RODA-in does not check if the SIPs are valid before exporting them and this process should be performed on the repository or with an external tool.</p>\
