added images and help in english

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -262,10 +262,9 @@ CreationModalProcessing.errorMessagesStopped.content=Due to the large number of 
 Please check the application's log file to see all the error messages.
 help=Help
 menu=Menu
-Main.helpPage=Help page
+Main.helpPage=Help
 
 errorValidatingMetadata = The file is not valid according to the schema.
 
 
-ExportBox.title=4. Final Step
-
+ExportBox.title=4. Submission Packages
