--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -261,7 +261,7 @@ CreationModalProcessing.errorMessagesStopped.content=Devido ao elevado número d
 Consulte o ficheiro de registo da aplicação para ver todas as mensagens de erro.
 help=Ajuda
 menu=Menu
-Main.helpPage=Página de ajuda
+Main.helpPage=Ajuda
 
 
 errorValidatingMetadata = O ficheiro não é valido de acordo com o schema.
