Fixed es_CL translation based on en

--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -40,7 +40,7 @@ FileExplorerPane.help.title=Seleccionar carpeta que contiene sus archivos
 FileExplorerPane.title=1. Explorador de Archivos
 InspectionPane.help.ruleList=Asociar archivos / directorios\na un objeto Descripción\npara crear una nueva asociación
 InspectionPane.help.title=Seleccione un elemento del\n paquetes de informacíon para inspeccionarlo
-InspectionPane.metadata=Metadata
+InspectionPane.metadata=Metadados
 InspectionPane.metadata.placeholder=Escribe los metadatos para la descripción del nodo aquí
 InspectionPane.onDrop=Crear asociación
 InspectionPane.rules=Asociaciones
@@ -179,7 +179,7 @@ InspectionPane.title=3. Inspector
 InspectionPane.changeTemplate.title=Plantilla de anulación
 InspectionPane.changeTemplate.header=Usted quiere anular la plantilla?
 InspectionPane.changeTemplate.content=Ya no podrá utilizar el formulario para editar este archivo de metadatos.
-items=Items
+items=Elementos
 folders=Carpeta(s)
 Footer.memory=El uso de memoria\:%s de%s
 type=Tipo
@@ -223,3 +223,31 @@ errorValidatingMetadata = El archivo no es válido según el esquema.
 
 
 ExportBox.title=4. Passo Final
+
+
+InspectionPane.removeRepresentation = Eliminar representación
+CreationModalPreparation.createReport = Crear informe de inventario
+CreationModalPreparation.prefix = Nombres de los SIPs
+name_types.ID = ID
+name_types.TITLE_ID = Título + ID
+name_types.TITLE_DATE = Título + Data
+and = y
+CreationModalPreparation.includeHierarchy = Incluir jerarquía
+Main.newVersion.content=La versión actual es %s\nLa última versión es %s\n\nDesea descargar la última versión de RODA-in?
+Main.newVersion.header = Nueva versión disponible
+Main.help = Ayuda
+Main.checkVersion = Buscar actualizaciones
+Main.noUpdates.content = Estás usando la última versión de RODA-in.
+Main.noUpdates.header = RODA-in versión %s
+Main.showHelp = Mostrar sugerencias de ayuda
+Main.hideHelp = Ocultar sugerencias de ayuda
+templatingSystemHelp.header = Ayuda del sistema de plantillas
+metadata.otherlevel = Otro nivel
+validMetadata = Metadatos válidos!
+invalidMetadata = Metadatos no válidos!
+CreationModalProcessing.errorMessagesStopped.header = Mensajes de error ocultos
+CreationModalProcessing.errorMessagesStopped.content = Debido al gran número de mensajes de error
+help - Ayuda
+menu - Menú
+Main.helpPage - Ayuda
+
