HU translation updated based on EN translation

--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -16,7 +16,7 @@ files=fájlok
 ignore=Kihagy
 load=Betöltés
 remove=Eltávolít
-start=Start
+start=Indítás
 root=Gyökér
 CreationModalPreparation.choose=Válassz...
 CreationModalPreparation.creatingSips=SIP-ek létrehozása
@@ -105,7 +105,7 @@ metadata.diffFolder.title=Egy mappából való betöltés
 metadata.diffFolder.description=Ebben a módban azt a mappát lehet megjelölni, ahol valamennyi, a SIP-be betöltendő metaadat fájl van. A metaadatfájlok és a SIP-ek összerendelése a (kiterjesztés nélküli) fájlnéven keresztül történik. Azokban a SIP-ekben, ahol az összerendelés nem lehetséges, nem lesz metaadat.
 metadata.template.title=Új metaadatok létrehozása sablonból
 metadata.template.description=Ezzel előre meghatározott sablonból lehet létrehozni. Ilyenkor valamennyi SIP-be ugyanaz a metaadat kerül. A SIP létrehozása után a felhasználó az csomagban lévő elsődleges adatok alapján a metaadatokat tovább szerkesztheti.
-export=Create SIP(s)
+export=Teremt SIP(s)
 SchemaPane.dragHelp=Mappák/fájlok elhelyezése\n
 SchemaPane.confirmRemove.header=Biztos vagy benne, hogy ezek a fájlok eltávolíthatók?
 SchemaPane.confirmRemove.content=A művelet eltávolítja valamennyi kiválasztott leírási szintet.
@@ -121,7 +121,7 @@ Main.confirmReset.content=Minden változtatás el fog veszni.
 CreationModalProcessing.alert.title=Exportálási hiba
 CreationModalProcessing.alert.header=A "%s" SIP exportálása során hiba történt
 CreationModalProcessing.alert.stacktrace=A hibajelentés szerint\:
-CreationModalProcessing.representation=Processing representation
+CreationModalProcessing.representation=Feldolgozás képviselet
 CreationModalProcessing.cause=Ok
 metadataValue.id=ID
 metadataValue.title=Cím
@@ -183,7 +183,7 @@ items=darab
 folders=mappák
 Footer.memory=Felhasznált memória % a %s-ból
 type=Típus
-version=Version
+version=Változat
 metadata.repository=Levéltár
 metadata.embargoTime=Zárolási idő
 IPContentType.ERMS=Elektronikus Iratkezelő Rendszer
@@ -202,7 +202,7 @@ RepresentationType.MIXED=MIXED
 
 metadata.descDate=A leírás készítési dátuma
 InspectionPane.sipTypeTooltip=Infomrációs csomag típus
-InspectionPane.representationTypeTooltip=Representation type
+InspectionPane.representationTypeTooltip=Ábrázolási mód
 genericError.title=Hoppá\! Hiba történt.
 genericError.content=Váratlan hiba történt. Az alkalmazás nem stabil és furcsaságokat produkálhat. Vegye fel a kapcsolatot a fejlesztőkkel.
 CreationModalProcessing.openfolder=Mappa megnyitása
@@ -216,7 +216,36 @@ InspectionPane.multipleSelected.appliedMessage=Változtatások végrehajtva\!
 Main.openConfigurationFolder=Konfiguráció mappa megnyitása
 restart=Újraindítás
 
-errorValidatingMetadata = The file is not valid according to the schema.
+errorValidatingMetadata = A fájl nem érvényes szerint a séma.
 
-ExportBox.title=4. Final Step
+ExportBox.title=4. Submission csomagok
 
+
+InspectionPane.removeRepresentation = Távolítsuk képviselet
+IPContentType.RDB = A relációs adatbázis-kezelő rendszer
+IPContentType.GEODATA = Földrajzi adatok
+IPContentType.SFSB = Egyszerű fájlrendszer alapú
+CreationModalPreparation.createReport = Készítsen nyilvántartási jelentés
+CreationModalPreparation.prefix = SIP nevek
+name_types.ID = ID
+name_types.TITLE_ID = Cím + ID
+name_types.TITLE_DATE = Cím + Dátum
+and = és
+CreationModalPreparation.includeHierarchy = Tartalmazza hierarchia
+Main.newVersion.content = A jelenlegi verzió %s\nLegújabb verzió %s\n\nSzeretnéd letölteni a legújabb verzióját RODA-in?
+Main.newVersion.header = Új verzió elérhető
+Main.help = Segítség
+Main.checkVersion = Frissítések keresése
+Main.noUpdates.content = Te a legújabb verzióját RODA-in.
+Main.noUpdates.header = RODA-in verzió %s
+Main.showHelp = Súgó megjelenítése tooltips
+Main.hideHelp = Hide segítségével tooltips
+templatingSystemHelp.header = Sablonrendszer segítség
+metadata.otherlevel = Más szinten
+validMetadata = Érvényes metaadatok!
+invalidMetadata = Érvénytelen metaadat!
+CreationModalProcessing.errorMessagesStopped.header = Hibaüzenetek rejtett
+CreationModalProcessing.errorMessagesStopped.content = Mivel a nagyszámú hibaüzenetek
+help = Segítség
+menu = Menü
+Main.helpPage = Segítség
