Updated HU and ES translations

--- a/src/main/resources/properties/help_es_CL.properties
+++ b/src/main/resources/properties/help_es_CL.properties
@@ -1,10 +1,12 @@
-associate=
-associationMethod=
-export=
-fileExplorer=
-firstStep=
-inspectionPanel.associations=
-inspectionPanel.data=
-inspectionPanel.metadata=
-metadataMethod=
-secondStep=
+tooltip.associate=Crear SIPs utilizando los elementos seleccionados.
+tooltip.associationMethod=El método elegido determina cómo se envían los archivos / carpetas en SIP
+tooltip.export=Inicie el proceso de exportación de los SIP seleccionados (o todos).
+tooltip.fileExplorer=El explorador de archivos muestra la jerarquía de las carpetas agregadas. Un elemento puede estar en uno de los tres estados: normal, ignorado o asignado.
+tooltip.firstStep=En primer lugar, seleccione qué carpetas contienen los archivos que se archivarán.
+tooltip.inspectionPanel=Después de crear SIP, puede optar por enriquecer manualmente los SIP o manejar casos excepcionales manualmente.
+tooltip.inspectionPanel.associations=El panel de asociaciones muestra las reglas que se han creado con el nodo seleccionado.
+tooltip.inspectionPanel.data=Este panel muestra los datos o la documentación del SIP seleccionado. Para alternar entre los dos modos, utilice el botón a la derecha.
+tooltip.inspectionPanel.metadata=Crear, eliminar, editar y validar los metadatos de un SIP.
+tooltip.metadataMethod=El método de metadatos elegido determina cómo se agregan los metadatos a los SIP.
+tooltip.schemaPane=Crear o editar un esquema de clasificación.
+tooltip.secondStep=El segundo paso es importar el esquema de clasificación de un archivo o crearlo directamente en la aplicación.
