--- a/src/main/resources/properties/help_hu.properties
+++ b/src/main/resources/properties/help_hu.properties
@@ -1,10 +1,15 @@
-associate=
-associationMethod=
-export=
-fileExplorer=
-firstStep=
-inspectionPanel.associations=
-inspectionPanel.data=
-inspectionPanel.metadata=
-metadataMethod=
-secondStep=
+help=SEGÍTSÉG
+helpText=sAOAdf fssdf sdf sdf sdf fs fsf sdfdsfsdfvsvfsfsvfsvfsdfvdfvfvf
+
+tooltip.associate=Készítsen SIP segítségével a kiválasztott elemeket.
+tooltip.associationMethod=A választott módszer határozza meg a fájlok / mappák vannak csomagolva SIPs
+tooltip.export=Kezdje a kiviteli folyamat a kiválasztott (vagy az összes) SIPs.
+tooltip.fileExplorer=A File Explorer mutatja a hierarchia a hozzáadott mappák. Egy tétel lehet egy három állapot: normál, vagy figyelmen kívül hagyja leképezve.
+tooltip.firstStep=Először válassza ki, melyik mappák tartalmazzák a fájlok kerülnek archiválásra.
+tooltip.inspectionPanel=Miután létrehozta a SIPs, akkor választhat, hogy manuálisan gazdagítják a SIP vagy kezelni kivételes esetekben manuálisan.
+tooltip.inspectionPanel.associations=Az egyesületek panel megjeleníti a szabályokat hoztak létre a kiválasztott csomóponthoz.
+tooltip.inspectionPanel.data=Ez a panel megjeleníti az adatok vagy a dokumentáció a kiválasztott SIP. Ha váltani a két mód között, használja a jobb oldali gombra.
+tooltip.inspectionPanel.metadata=Készítsen, eltávolítani, szerkeszteni és érvényesítse a metaadatok egy SIP.
+tooltip.metadataMethod=A kiválasztott metaadatokat módszerrel határozza meg a metaadatok adunk SIP.
+tooltip.schemaPane=Létrehozása vagy szerkesztése osztályozási rendszer szerint.
+tooltip.secondStep=A második lépés az, hogy importálja a besorolási séma egy fájlból vagy a létrehozása az alkalmazásban.
