Added limit to multiple edit

--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -251,3 +251,6 @@ help - Ayuda
 menu - Menú
 Main.helpPage - Ayuda
 
+SchemaPane.tooManySelected.header=Demasiados elementos seleccionados
+SchemaPane.tooManySelected.content=Edición multipla no disponible
+SchemaPane.tooManySelected.title=Demasiados elementos seleccionados
