--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -267,3 +267,7 @@ Main.helpPage=Ajuda
 errorValidatingMetadata = O ficheiro não é valido de acordo com o schema.
 
 ExportBox.title=4. Pacotes de Submissão
+
+SchemaPane.tooManySelected.header=Demasiados itens seleccionados
+SchemaPane.tooManySelected.content=Edição múltipla não disponível
+SchemaPane.tooManySelected.title=Demasiados itens seleccionados
