--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -268,3 +268,7 @@ errorValidatingMetadata = The file is not valid according to the schema.
 
 
 ExportBox.title=4. Submission Packages
+
+SchemaPane.tooManySelected.header=Too many items selected
+SchemaPane.tooManySelected.content=Multiple edition not available
+SchemaPane.tooManySelected.title=Too many items selected
