--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -247,9 +247,9 @@ validMetadata = Metadatos válidos!
 invalidMetadata = Metadatos no válidos!
 CreationModalProcessing.errorMessagesStopped.header = Mensajes de error ocultos
 CreationModalProcessing.errorMessagesStopped.content = Debido al gran número de mensajes de error
-help - Ayuda
-menu - Menú
-Main.helpPage - Ayuda
+help = Ayuda
+menu = Menú
+Main.helpPage = Ayuda
 
 SchemaPane.tooManySelected.header=Demasiados elementos seleccionados
 SchemaPane.tooManySelected.content=Edición multipla no disponible
