WIP: Refresh file explorer panel when adding new files / folders

--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -14,6 +14,7 @@ file=fájl
 filechooser.title=Válassz egy fájlt
 files=fájlok
 ignore=Kihagy
+refresh=Frissítés
 load=Betöltés
 remove=Eltávolít
 start=Indítás
