--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -14,6 +14,7 @@ file=\ ficheiro
 filechooser.title=Escolha um ficheiro
 files=\ ficheiros
 ignore=Ignorar
+refresh=Atualizar
 load=Carregar
 remove=Remover
 start=Iniciar
