--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -14,6 +14,7 @@ file=Archivo
 filechooser.title=Por favor seleccione un archivo
 files=Archivos
 ignore=Ignorar
+refresh=Atualizar
 load=Cargar
 remove=Quitar
 start=Iniciar
