added rename representation option and modal

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -17,6 +17,7 @@ ignore=Ignore
 load=Load
 remove=Remove
 start=Start
+rename=Rename
 root=Root
 
 CreationModalPreparation.choose=Choose...
@@ -36,6 +37,8 @@ CreationModalProcessing.finished=Finished
 CreationModalProcessing.impossibleEstimate=Impossible to estimate time
 CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
+RenameModalProcessing.renameRepresentation=Rename representation
+RenameModalProcessing.renameAlreadyExists=This representation name is already being used
 
 FileExplorerPane.chooseDir=Choose folder
 FileExplorerPane.help.title=Choose the folders\nthat contain your files
