--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -17,6 +17,7 @@ ignore=Ignorar
 load=Cargar
 remove=Quitar
 start=Iniciar
+rename=Renombrar
 root=Raíz
 CreationModalPreparation.choose=Seleccionar...
 CreationModalPreparation.creatingSips=Creando SIPs
@@ -35,6 +36,8 @@ CreationModalProcessing.finished=Finalizado
 CreationModalProcessing.impossibleEstimate=Es imposible estimar el tiempo
 CreationModalProcessing.remaining=Tiempo restante
 CreationModalProcessing.subtitle=Creado %d of %d (%d%%)
+RenameModalProcessing.renameRepresentation=Renombrar representación
+RenameModalProcessing.renameAlreadyExists=Este nombre de representación ya se está utilizando
 FileExplorerPane.chooseDir=Seleccionar carpeta
 FileExplorerPane.help.title=Seleccionar carpeta que contiene sus archivos
 FileExplorerPane.title=1. Explorador de Archivos
