--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -17,6 +17,7 @@ ignore=Kihagy
 load=Betöltés
 remove=Eltávolít
 start=Indítás
+rename=Átnevezés
 root=Gyökér
 CreationModalPreparation.choose=Válassz...
 CreationModalPreparation.creatingSips=SIP-ek létrehozása
@@ -35,6 +36,8 @@ CreationModalProcessing.finished=Kész
 CreationModalProcessing.impossibleEstimate=Nem becsülhető a várható befejezés.
 CreationModalProcessing.remaining=Hátralévő idő
 CreationModalProcessing.subtitle=%d elkészült %d (%d%%)-ből
+RenameModalProcessing.renameRepresentation=átnevezése képviselet
+RenameModalProcessing.renameAlreadyExists=Ez az ábrázolás név már használatban van
 FileExplorerPane.chooseDir=Mappaválasztás
 FileExplorerPane.help.title=Válaszd ki a fájlokat\ntartalmazó mappát
 FileExplorerPane.title=1. Forrásfájlkereső
