--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -17,6 +17,7 @@ ignore=Ignorar
 load=Carregar
 remove=Remover
 start=Iniciar
+rename=Renomear
 root=Raiz
 
 CreationModalPreparation.choose=Escolher...
@@ -36,6 +37,8 @@ CreationModalProcessing.finished=Terminado
 CreationModalProcessing.impossibleEstimate=Não é possível estimar o tempo
 CreationModalProcessing.remaining=Previsão
 CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
+RenameModalProcessing.renameRepresentation=Renomear representação
+RenameModalProcessing.renameAlreadyExists=Este nome de representação já está em uso
 
 FileExplorerPane.chooseDir=Escolher pasta
 FileExplorerPane.help.title=Selecione as pastas\nque contêm os seus ficheiros
